<?xml version="1.0" encoding="UTF-8"?>
<!--
  ~ Copyright The Dongting Project
  ~
  ~ The Dongting Project licenses this file to you under the Apache License,
  ~ version 2.0 (the "License"); you may not use this file except in compliance
  ~ with the License. You may obtain a copy of the License at:
  ~
  ~   https://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
  ~ WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
  ~ License for the specific language governing permissions and limitations
  ~ under the License.
  -->
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <artifactId>dongting</artifactId>
        <groupId>com.github.dtprj.dongting</groupId>
        <version>0.8.1-SNAPSHOT</version>
    </parent>
    <artifactId>dongting-server</artifactId>
    <dependencies>
        <dependency>
            <groupId>com.github.dtprj.dongting</groupId>
            <artifactId>dongting-client</artifactId>
            <version>0.8.1-SNAPSHOT</version>
        </dependency>
    </dependencies>
    <build>
        <finalName>dongting-server-${project.version}</finalName>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>11</source>
                    <target>11</target>
                    <release>11</release>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>